<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/one_fourty_dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:contentPadding="@dimen/five_dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/movie_first_ll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ninty_dp"
                android:orientation="horizontal"
                android:weightSum="4">
                <ImageView
                    android:id="@+id/movie_logo_iv"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher"
                    android:padding="@dimen/five_dp"
                    android:contentDescription="@string/app_name" />
                <TextView
                    android:id="@+id/movie_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="end"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:drawableRight="@mipmap/ic_next"
                    android:drawableEnd="@mipmap/ic_next"
                    android:textSize="@dimen/text_sixteen_sp"
                    android:textColor="@color/colorAccent"
                    android:text="@string/app_name"
                    android:layout_weight="3"
                    android:padding="@dimen/five_dp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/movie_release_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fifty_dp"
                android:layout_below="@id/movie_first_ll"
                android:textSize="@dimen/text_fourteen_sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorAccent"
                android:text="@string/release_date"
                />
            <TextView
                android:id="@+id/movie_maturity_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:layout_below="@id/movie_first_ll"
                android:layout_toRightOf="@id/movie_release_tv"
                android:layout_toEndOf="@id/movie_release_tv"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:gravity="end"
                android:textSize="@dimen/text_fourteen_sp"
                android:textColor="@color/colorAccent"
                android:text="@string/maturity"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>